deployment/hls-cluster/test_video/hls-test1234-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hls-streamer-test1234
  namespace: video-proc-streaming
  labels:
    app: hls-streamer
    stream-key: test1234
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hls-streamer
      stream-key: test1234
  template:
    metadata:
      labels:
        app: hls-streamer
        stream-key: test1234
        namespace: video-proc-streaming
    spec:
      containers:
        - name: ffmpeg
          image: eu.gcr.io/uob-tv-project-dev/uob-tv-ffmpeg:3
          imagePullPolicy: IfNotPresent
          command: ["/start-ffmpeg.sh"]
          ports:
          - containerPort: 1935
          resources:
            requests:
              memory: "128Mi"
              cpu: "80m"
            limits:
              memory: "256Mi"
              cpu: "300m"
          volumeMounts:
            - name: video-data
              mountPath: /var/ffmpeg-out
        - name: nginx
          image: eu.gcr.io/uob-tv-project-dev/nginx:1
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
          resources:
            requests:
              memory: "60Mi"
              cpu: "50m"
            limits:
              memory: "120Mi"
              cpu: "150m"
          volumeMounts:
            - name: video-data
              mountPath: /var/ffmpeg-out
      volumes:
        - name: video-data
          emptyDir: {}
